2005-09-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt:
  - Added missing -c to sample compiler command line, thanks Johnson Zhao
2005-09-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx:
  - Documented thread safety constraints
 include/pqxx/cursor.hxx, include/pqxx/transaction_base.hxx, src/cursor.cxx,
 src/transaction_base.cxx:
  - Removed unnecessary "mutable" in icursor_iterator
  - Made variable cache non-mutable
  - transaction_base::get_variable() is no longer const
2005-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/connection_base.hxx:
  - Hopefull fixed auto_ptr issue, thanks Maximiliano Pin.
2005-09-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Removed spurious "return," thanks Maximiliano Pin
  - RogueWave's auto_ptr doesn't copy-construct from const (Max again)
2005-09-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Added <cassert>, thanks a.maclean@cas.edu.au
2005-09-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Replaced some assertions with exceptions
2005-08-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Wrong variable name in example.  Thanks Marc Herbert.
  - Mentioned outdated OnCommit() etc. names--thanks Lolke Dijkstra
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Made capabilities check immediate (was deferred) for thread safety
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - New move/fetch functions correct for weird row accounting
 include/pqxx/result.hxx, src/result.cxx:
  - reverse_iterators now "point at" same element as embedded iterator
  - reverse_iterators' base() now use temporaries, which is safe
  - reverse_iterators' mutable m_tmp member no longer needed
  - reverse_iterators' dereference operators now inherited unchanged
  - Improved thread safety on reverse_iterators
  - Simplified difference computation on reverse_iterators
 test/test042.cxx: