@@ -15,6 +15,7 @@ PQXX_HAVE_CPP_PRAGMA_MESSAGE	public	compiler
 PQXX_HAVE_CPP_WARNING	public	compiler
 PQXX_HAVE_IOS	public	compiler
 PQXX_HAVE_LIMITS	public	compiler
+PQXX_HAVE_LO_TELL	internal	libpq
 PQXX_HAVE_LOCALE	internal	compiler
 PQXX_HAVE_LONG_DOUBLE	public	compiler
 PQXX_HAVE_NAN	internal	compiler
